--- a/style/style.scss
+++ b/style/style.scss
@@ -1,24 +1,21 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
-@import url("https://fonts.googleapis.com/icon?family=Material+Icons");
 
-@mixin outline {
-  box-shadow: 0 0 0 1px #c9c9c9;
+:root {
+  font-size: 16px;
 }
 
-html {
-  font-family: "Roboto", sans-serif;
-  color: #000;
-}
-
-a {
-  text-decoration: none;
-  color: #000;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
 body {
-  margin: 0;
+  width: 1200px;
+  margin: auto;
+  font-family: 'Roboto', sans-serif;
 }
 
-nav {
-  @include outline();
+header {
+  margin: 20px 0;
 }
