--- a/components/cookies/index.html
+++ b/components/cookies/index.html
@@ -15,7 +15,7 @@
         <h1>Cookie compliance component</h1>
     </header>
     <main></main>
-    <script src="../cookie-compliance.js"></script>
+    <script src="script.js"></script>
 </body>
 
 </html>
