--- a/components/construction/src/index.html
+++ b/components/construction/src/index.html
@@ -2,18 +2,15 @@
 <html lang="cs">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="author" content="David Brzý & Jakub Klapka">
     <title>Sport Klapka</title>
+    <meta charset="UTF-8">
+    <meta name="author" content="Studio Denali">
     <link rel="shortcut icon" href="favicon.ico">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link
-        href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
-        rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
     <style>
         :root {
-            /* Change colors here*/
             --accent: #DD4445;
             --background: white;
             --text: black;
@@ -24,7 +21,7 @@
             background-color: var(--background);
             font-family: 'Roboto', sans-serif;
             text-align: center;
-            margin-top: 15%;
+            margin-top: 10%;
         }
 
         a {
@@ -32,8 +29,12 @@
             color: var(--accent)
         }
 
+        a:hover{
+            text-decoration: underline;
+        }
+
         img {
-            width: 200px;
+            width: 15%;
         }
     </style>
 </head>
