--- a/components/cookies/index.html
+++ b/components/cookies/index.html
@@ -7,14 +7,32 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <meta name="author" content="David Brzý & Jakub Klapka">
     <title>Cookie compliance component | Studio Denali</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
+    <div id="modal">
+        <div class="modal-content">
+            <span class="close">&times;</span>
+        </div>
+    </div>
     <header>
         <h1>Cookie compliance component</h1>
     </header>
-    <main></main>
+    <main>
+        <div class="cookie-consent">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam iusto eius ipsa repudiandae nihil, laborum
+                quibusdam, possimus hic est debitis recusandae iste, id reiciendis accusamus doloribus eos ab error.
+                Quas!</p>
+            <button id="manage-cookies" type="button">Manage cookies</button>
+            <button id="accept-all" type="button">Accept all</button>
+        </div>
+    </main>
     <script src="script.js"></script>
 </body>
 
