--- a/components/cookies/index.html
+++ b/components/cookies/index.html
@@ -19,6 +19,43 @@
     <div id="modal">
         <div class="modal-content">
             <span class="close">&times;</span>
+            <h1>Manage cookie preferences</h1>
+            <section class="analytics">
+                <h2>Analytics</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis obcaecati id saepe officia,
+                    consequatur voluptas! Alias expedita aliquid, distinctio magnam illum itaque quia officia minus
+                    molestiae tempora, reiciendis ea doloribus?</p>
+                <form>
+                    <input type="radio" id="analytics-accept" value="Accept">
+                    <label for="analytics-accept">Accept</label>
+                    <input type="radio" id="analytics-reject" value="Reject">
+                    <label for="analytics-reject">Reject</label>
+                </form>
+            </section>
+            <section class="social-media">
+                <h2>Social media</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis obcaecati id saepe officia,
+                    consequatur voluptas! Alias expedita aliquid, distinctio magnam illum itaque quia officia minus
+                    molestiae tempora, reiciendis ea doloribus?</p>
+                <form>
+                    <input type="radio" id="social-media-accept" value="Accept">
+                    <label for="social-media-accept">Accept</label>
+                    <input type="radio" id="social-media-reject" value="Reject">
+                    <label for="social-media-reject">Reject</label>
+                </form>
+            </section>
+            <section class="advertising">
+                <h2>Advertising</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis obcaecati id saepe officia,
+                    consequatur voluptas! Alias expedita aliquid, distinctio magnam illum itaque quia officia minus
+                    molestiae tempora, reiciendis ea doloribus?</p>
+                <form>
+                    <input type="radio" id="advertising-accept" value="Accept">
+                    <label for="advertising-accept">Accept</label>
+                    <input type="radio" id="advertising-reject" value="Reject">
+                    <label for="advertising-reject">Reject</label>
+                </form>
+            </section>
         </div>
     </div>
     <header>
@@ -26,9 +63,7 @@
     </header>
     <main>
         <div class="cookie-consent">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam iusto eius ipsa repudiandae nihil, laborum
-                quibusdam, possimus hic est debitis recusandae iste, id reiciendis accusamus doloribus eos ab error.
-                Quas!</p>
+            <p>We use cookies to improve your experience on our website and for advertising.</p>
             <button id="manage-cookies" type="button">Manage cookies</button>
             <button id="accept-all" type="button">Accept all</button>
         </div>
