--- a/components/cookies/style.css
+++ b/components/cookies/style.css
@@ -49,7 +49,8 @@ body {
     position: fixed;
     left: 0;
     bottom: 0;
-    height: 50px;
+    width: calc(100% - 20px);
+    height: 60px;
     margin: 10px;
     padding: 10px;
     border: 1px solid #e5e5e5;
@@ -57,14 +58,17 @@ body {
     grid-template-rows: 1fr;
     grid-template-columns: 1fr 150px 150px;
     gap: 20px;
+    align-items: center;
 }
 
 #manage-cookies {
+    height: 40px;
     border: none;
     cursor: pointer;
 }
 
 #accept-all {
+    height: 40px;
     background-color: #4f54ff;
     border: none;
     color: #ffffff;
