--- a/components/cookies/style.scss
+++ b/components/cookies/style.scss
@@ -1,5 +1,12 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 
+@mixin shadow {
+    box-shadow: #959da533 0 8px 24px;
+    @media (prefers-color-scheme: dark) {
+      box-shadow: #00000033 0 8px 24px;
+    }
+}
+
 :root {
     font-size: 16px;
 }
@@ -32,6 +39,7 @@ body {
     width: 50%;
     padding: 25px;
     background-color: #ffffff;
+    @include shadow();
     section {
         margin: 32px 0;
         h2 {
