--- a/components/cookies/style.scss
+++ b/components/cookies/style.scss
@@ -38,6 +38,7 @@ body {
 .modal-content {
     width: 50%;
     padding: 25px;
+    border-radius: 15px;
     background-color: #ffffff;
     @include shadow();
     section {
