--- a/components/editor/style.css
+++ b/components/editor/style.css
@@ -1,12 +1,14 @@
 body {
-  margin: 0;
+  margin: 5%;
 }
 
 textarea {
   width: 100%;
   height: 100%;
   resize: none;
-  border: none;
   outline: none;
-  padding: 5%;
+}
+
+.menu{
+    display: inline;
 }
