--- a/components/editor/style.css
+++ b/components/editor/style.css
@@ -1,10 +1,13 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+
 body {
-  margin: 5%;
+  font-family: 'Roboto', sans-serif;
+  display: inline-flex;
+  margin: 0;
+  width: 100%;
 }
 
 textarea {
-  width: 100%;
-  height: 100%;
   resize: none;
   outline: none;
 }
@@ -14,7 +17,20 @@ nav {
 }
 
 #editor {
-  display: block;
-  background-color: black;
+  background-color: rgb(230, 230, 230);
+  padding: 25px;
+  width: 50%;
+  height: 100%;
+}
+
+#text{
+  font-family: 'Roboto', sans-serif;
+  font-size: 15px;
+  width: 100%;
+  height: 750px;
+}
+
+#parsed{
+  width: 50%;
   padding: 25px;
 }
