--- a/components/editor/index.html
+++ b/components/editor/index.html
@@ -4,12 +4,15 @@
 <body>
     <div id="editor">
         <nav>
-            <button onclick="editorInsertFormatting(text, '**');"><b>B</b></button>
-            <button onclick="editorInsertFormatting(text, '*');"><i>I</i></button>
-            <button onclick="editorInsertFormatting(text, '~~');"><s>S</s></button>
+            <button title="Bold" onclick="editorInsertFormatting(text, '**');"><b>B</b></button>
+            <button title="Italic" onclick="editorInsertFormatting(text, '*');"><i>I</i></button>
+            <button title="Strikethrough" onclick="editorInsertFormatting(text, '~~');"><s>S</s></button>
             <button onclick="editorHeader(text, '#');">#</button>
-            <button onclick=editorDownload(text.value)>Save</button>
-            <button onclick="liveParserOutput()" selected>&lt;/&gt; Output</>
+            <button onclick=editorDownload(text.value,'download.md')>Save</button>
+            <button onclick="devtoolsOpen()" ondblclick="devtoolsClose()">&lt;/&gt;</button>
+                <div id="devtools">
+                    <button onclick="liveParserOutput()">Console output</button>
+                </div>
         </nav>
         <textarea autofocus id="text" oninput="liveParser()"></textarea>
     </div>
