--- a/docs/editor/style.css
+++ b/docs/editor/style.css
@@ -10,6 +10,11 @@ body {
 textarea {
   resize: none;
   outline: none;
+  background-color: white;
+  box-shadow: 0 0 0 1px #c9c9c9;
+  border: none;
+  border-radius: 5px;
+  padding: 20px;
 }
 
 nav {
@@ -17,7 +22,6 @@ nav {
 }
 
 #editor {
-  background-color: rgb(241, 241, 241);
   padding: 25px;
   width: 50%;
   height: 100%;
@@ -27,7 +31,7 @@ nav {
   font-family: 'Roboto', sans-serif;
   font-size: 15px;
   width: 100%;
-  height: 750px;
+  height: 650px;
 }
 
 #parsed{
@@ -43,7 +47,12 @@ nav {
   padding: 10px;
   border: none;
   width: 50px;
+  height: 50px;
+  border-radius: 5px;
   background-color: white;
+  box-shadow: 0 0 0 1px #c9c9c9;
+  margin-bottom: 15px;
+  margin-right: 10px;
 }
 
 #editor button:hover {
@@ -51,9 +60,6 @@ nav {
  cursor: pointer;
 }
 
-#editor nav{
-  background-color: white;
-  box-shadow: 0 0 0 1px #c9c9c9;
-  border-radius: 500px;
-  padding: 10px;
+#devtools button{
+ width: 115px;
 }
