--- a/styles/style.scss
+++ b/styles/style.scss
@@ -2,4 +2,16 @@
   box-shadow: 0 0 0 1px #c9c9c9;
 }
 
-$background: #eeeeee;
+$background: #F1F1F1;
+$border-radius: 5px;
+$outline: 0 0 0 1px #c9c9c9;;
+
+body{
+  margin: 25px;
+}
+
+#editor{
+  background-color: $background;
+  border-radius: $border-radius;
+  box-shadow: $outline;
+}
