--- a/docs/style.css
+++ b/docs/style.css
@@ -1,9 +1,11 @@
+@import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
 body {
+  font-family: "Roboto", sans-serif;
   margin: 25px;
 }
 
 #editor {
-  background-color: #F1F1F1;
+  background-color: #f1f1f1;
   border-radius: 5px;
   -webkit-box-shadow: 0 0 0 1px #c9c9c9;
           box-shadow: 0 0 0 1px #c9c9c9;
