--- a/styles/style.scss
+++ b/styles/style.scss
@@ -1,16 +1,19 @@
+@import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
+
 @mixin outline {
   box-shadow: 0 0 0 1px #c9c9c9;
 }
 
-$background: #F1F1F1;
+$background: #f1f1f1;
 $border-radius: 5px;
-$outline: 0 0 0 1px #c9c9c9;;
+$outline: 0 0 0 1px #c9c9c9;
 
-body{
+body {
+  font-family: "Roboto", sans-serif;
   margin: 25px;
 }
 
-#editor{
+#editor {
   background-color: $background;
   border-radius: $border-radius;
   box-shadow: $outline;
