--- a/docs/style.css
+++ b/docs/style.css
@@ -5,8 +5,54 @@ body {
 }
 
 #editor {
+  padding: 25px;
+  width: 50%;
   background-color: #f1f1f1;
   border-radius: 5px;
   -webkit-box-shadow: 0 0 0 1px #c9c9c9;
           box-shadow: 0 0 0 1px #c9c9c9;
+}
+
+#editor nav {
+  display: inline;
+}
+
+#editor button {
+  border: none;
+  margin: 0 10px 10px 0;
+  padding: 10px;
+  width: 50px;
+  height: 50px;
+  border-radius: 5px;
+  -webkit-box-shadow: 0 0 0 1px #c9c9c9;
+          box-shadow: 0 0 0 1px #c9c9c9;
+  background-color: #ffffff;
+}
+
+#editor button:hover {
+  cursor: pointer;
+  background-color: #f1f1f1;
+}
+
+#editor textarea {
+  border: none;
+  outline: none;
+  resize: none;
+  padding: 20px;
+  width: 100%;
+  height: 500px;
+  font-size: 15px;
+  border-radius: 5px;
+  -webkit-box-shadow: 0 0 0 1px #c9c9c9;
+          box-shadow: 0 0 0 1px #c9c9c9;
+  font-family: "Roboto", sans-serif;
+  background-color: #ffffff;
+}
+
+#editor #devtools {
+  display: none;
+}
+
+#editor #devtools button {
+  width: 115px;
 }
