--- a/styles/style.scss
+++ b/styles/style.scss
@@ -4,17 +4,16 @@
   box-shadow: 0 0 0 1px #c9c9c9;
 }
 
-$background: #f1f1f1;
 $border-radius: 5px;
 $outline: 0 0 0 1px #c9c9c9;
+$font-family: "Roboto", sans-serif;
+
+$white: #ffffff;
+$gray: #f1f1f1;
 
 body {
   font-family: "Roboto", sans-serif;
   margin: 25px;
 }
 
-#editor {
-  background-color: $background;
-  border-radius: $border-radius;
-  box-shadow: $outline;
-}
+@import "./editor";
