--- a/styles/_editor.scss
+++ b/styles/_editor.scss
@@ -31,7 +31,7 @@
     font-size: 15px;
     border-radius: $border-radius;
     box-shadow: $outline;
-    font-family: $font-family;
+    font-family: $text;
     background-color: $white;
   }
   #devtools {
@@ -39,5 +39,16 @@
     button {
       width: 115px;
     }
+  }
+  p {
+    font-family: $text;
+  }
+  h1,
+  h2,
+  h3,
+  h4,
+  h5,
+  h6 {
+    font-family: $text;
   }
 }
