--- a/styles/style.scss
+++ b/styles/style.scss
@@ -3,23 +3,16 @@
 
 $border-radius: 5px;
 $outline: 0 0 0 1px #c9c9c9;
-$font-family: "Roboto", sans-serif;
+
+$heading: "Lora", serif;
+$text: "Roboto", sans-serif;
 
 $white: #ffffff;
 $gray: #f1f1f1;
 
 body {
-  font-family: "Roboto", sans-serif;
+  font-family: $text;
   margin: 25px;
-}
-
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-  font-family: "Lora", serif;
 }
 
 @import "./editor";
