--- a/docs/style.css
+++ b/docs/style.css
@@ -71,3 +71,24 @@ body {
 #editor h6 {
   font-family: "Roboto", sans-serif;
 }
+
+#invoice {
+  padding: 25px;
+  width: 50%;
+  background-color: #f1f1f1;
+  border-radius: 5px;
+  -webkit-box-shadow: 0 0 0 1px #c9c9c9;
+          box-shadow: 0 0 0 1px #c9c9c9;
+}
+
+#invoice #paper {
+  padding: 20px;
+  background-color: #ffffff;
+  border-radius: 5px;
+  -webkit-box-shadow: 0 0 0 1px #c9c9c9;
+          box-shadow: 0 0 0 1px #c9c9c9;
+}
+
+#invoice h1 {
+  font-family: "Lora", serif;
+}
