update docs/invoice/index.html, script.js, style.css and _invoice.scss

--- a/docs/style.css
+++ b/docs/style.css
@@ -89,6 +89,22 @@ body {
           box-shadow: 0 0 0 1px #c9c9c9;
 }
 
-#invoice h1 {
+#invoice h1, #invoice h2, #invoice h3 {
   font-family: "Lora", serif;
+}
+
+#invoice .variable {
+  color: #38ff73;
+}
+
+#invoice #inline {
+  width: 100%;
+}
+
+#invoice #left {
+  width: 50%;
+}
+
+#invoice #right {
+  width: 50%;
 }
