--- a/styles/_invoice.scss
+++ b/styles/_invoice.scss
@@ -10,7 +10,19 @@
     border-radius: $border-radius;
     box-shadow: $outline;
   }
-  h1 {
+  h1, h2, h3 {
     font-family: $heading;
+  }
+  .variable{
+    color: rgb(56, 255, 115);
+  }
+  #inline{
+    width: 100%;
+  }
+  #left{
+    width: 50%;
+  }
+  #right{
+    width: 50%;
   }
 }
