--- a/docs/style.css
+++ b/docs/style.css
@@ -88,3 +88,7 @@ body {
   -webkit-box-shadow: 0 0 0 1px #c9c9c9;
           box-shadow: 0 0 0 1px #c9c9c9;
 }
+
+#invoice nav {
+  padding-bottom: 10px;
+}
