--- a/docs/style.css
+++ b/docs/style.css
@@ -5,9 +5,20 @@ body {
   margin: 25px;
 }
 
-iframe {
-  border: 0;
-  height: 800px;
+button {
+  border: none;
+  margin: 0 10px 10px 0;
+  padding: 10px;
+  height: 50px;
+  border-radius: 5px;
+  -webkit-box-shadow: 0 0 0 1px #c9c9c9;
+          box-shadow: 0 0 0 1px #c9c9c9;
+  background-color: #ffffff;
+}
+
+button:hover {
+  cursor: pointer;
+  background-color: #f1f1f1;
 }
 
 #editor {
