--- a/docs/style.css
+++ b/docs/style.css
@@ -5,26 +5,19 @@ body {
   margin: 25px;
 }
 
-button {
-  border: none;
-  margin: 0 10px 10px 0;
-  padding: 10px;
-  height: 50px;
-  border-radius: 5px;
-  -webkit-box-shadow: 0 0 0 1px #c9c9c9;
-          box-shadow: 0 0 0 1px #c9c9c9;
-  background-color: #ffffff;
+h1 {
+  font-family: "Lora", serif;
 }
 
-button:hover {
-  cursor: pointer;
-  background-color: #f1f1f1;
+iframe {
+  border: 0;
+  height: 800px;
 }
 
 #editor {
   padding: 25px;
   width: 50%;
-  background-color: #f1f1f1;
+  background-color: #f8f8f8;
   border-radius: 5px;
   -webkit-box-shadow: 0 0 0 1px #c9c9c9;
           box-shadow: 0 0 0 1px #c9c9c9;
@@ -49,7 +42,7 @@ button:hover {
 
 #editor button:hover {
   cursor: pointer;
-  background-color: #f1f1f1;
+  background-color: #f8f8f8;
 }
 
 #editor textarea {
@@ -91,7 +84,7 @@ button:hover {
 #invoice {
   padding: 25px;
   width: 50%;
-  background-color: #f1f1f1;
+  background-color: #f8f8f8;
   border-radius: 5px;
   -webkit-box-shadow: 0 0 0 1px #c9c9c9;
           box-shadow: 0 0 0 1px #c9c9c9;
