delete 6 files and update 2 files

--- a/style.scss
+++ b/style.scss
@@ -24,6 +24,6 @@ iframe {
   height: 800px;
 }
 
-@import "./editor";
+@import "./docs/editor/editor";
 
-@import "./invoice";
+@import "./docs/invoice/invoice";
