--- a/docs/style.css
+++ b/docs/style.css
@@ -19,7 +19,8 @@ iframe {
   width: 50%;
   background-color: #f8f8f8;
   border-radius: 5px;
-  box-shadow: 0 0 0 1px #c9c9c9;
+  -webkit-box-shadow: 0 0 0 1px #c9c9c9;
+          box-shadow: 0 0 0 1px #c9c9c9;
 }
 
 #editor nav {
@@ -34,7 +35,8 @@ iframe {
   width: 50px;
   height: 50px;
   border-radius: 5px;
-  box-shadow: 0 0 0 1px #c9c9c9;
+  -webkit-box-shadow: 0 0 0 1px #c9c9c9;
+          box-shadow: 0 0 0 1px #c9c9c9;
   background-color: #ffffff;
 }
 
@@ -52,7 +54,8 @@ iframe {
   height: 500px;
   font-size: 15px;
   border-radius: 5px;
-  box-shadow: 0 0 0 1px #c9c9c9;
+  -webkit-box-shadow: 0 0 0 1px #c9c9c9;
+          box-shadow: 0 0 0 1px #c9c9c9;
   font-family: "Roboto", sans-serif;
   background-color: #ffffff;
 }
@@ -83,14 +86,16 @@ iframe {
   width: 50%;
   background-color: #f8f8f8;
   border-radius: 5px;
-  box-shadow: 0 0 0 1px #c9c9c9;
+  -webkit-box-shadow: 0 0 0 1px #c9c9c9;
+          box-shadow: 0 0 0 1px #c9c9c9;
 }
 
 #invoice #paper {
   padding: 20px;
   background-color: #ffffff;
   border-radius: 5px;
-  box-shadow: 0 0 0 1px #c9c9c9;
+  -webkit-box-shadow: 0 0 0 1px #c9c9c9;
+          box-shadow: 0 0 0 1px #c9c9c9;
 }
 
 #invoice nav {
