--- a/docs/style.css
+++ b/docs/style.css
@@ -1,5 +1,15 @@
 @import url("https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
+:root {
+  font-size: 16px;
+}
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 body {
   font-family: "Roboto", sans-serif;
   margin: 25px;
@@ -14,13 +24,95 @@ iframe {
   height: 800px;
 }
 
+#modal {
+  display: none;
+  position: fixed;
+  left: 0;
+  top: 0;
+  z-index: 1;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgba(0, 0, 0, 0.4);
+  justify-content: center;
+  align-items: center;
+}
+
+.modal-content {
+  width: 50%;
+  padding: 25px;
+  border-radius: 15px;
+  background-color: #ffffff;
+  box-shadow: #959da533 0 8px 24px;
+}
+
+@media (prefers-color-scheme: dark) {
+  .modal-content {
+    box-shadow: #00000033 0 8px 24px;
+  }
+}
+
+.modal-content section {
+  margin: 32px 0;
+}
+
+.modal-content section h2 {
+  margin: 0 0 8px 0;
+}
+
+.modal-content section p {
+  margin: 8px 0;
+}
+
+.close {
+  color: #000000;
+  float: right;
+  font-size: 28px;
+  font-weight: 700;
+}
+
+.close:hover,
+.close:focus {
+  text-decoration: none;
+  cursor: pointer;
+}
+
+.cookie-consent {
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  width: calc(100% - 20px);
+  height: 60px;
+  margin: 10px;
+  padding: 10px;
+  border: 1px solid #e5e5e5;
+  display: grid;
+  grid-template-rows: 1fr;
+  grid-template-columns: 1fr 150px 150px;
+  gap: 20px;
+  align-items: center;
+}
+
+#manage-cookies {
+  height: 40px;
+  border: none;
+  cursor: pointer;
+}
+
+#accept-all {
+  height: 40px;
+  background-color: #4f54ff;
+  border: none;
+  color: #ffffff;
+  cursor: pointer;
+}
+
 #editor {
   padding: 25px;
   width: 50%;
   background-color: #f8f8f8;
   border-radius: 5px;
-  -webkit-box-shadow: 0 0 0 1px #c9c9c9;
-          box-shadow: 0 0 0 1px #c9c9c9;
+  box-shadow: 0 0 0 1px #c9c9c9;
 }
 
 #editor nav {
@@ -35,8 +127,7 @@ iframe {
   width: 50px;
   height: 50px;
   border-radius: 5px;
-  -webkit-box-shadow: 0 0 0 1px #c9c9c9;
-          box-shadow: 0 0 0 1px #c9c9c9;
+  box-shadow: 0 0 0 1px #c9c9c9;
   background-color: #ffffff;
 }
 
@@ -54,8 +145,7 @@ iframe {
   height: 500px;
   font-size: 15px;
   border-radius: 5px;
-  -webkit-box-shadow: 0 0 0 1px #c9c9c9;
-          box-shadow: 0 0 0 1px #c9c9c9;
+  box-shadow: 0 0 0 1px #c9c9c9;
   font-family: "Roboto", sans-serif;
   background-color: #ffffff;
 }
@@ -86,16 +176,14 @@ iframe {
   width: 50%;
   background-color: #f8f8f8;
   border-radius: 5px;
-  -webkit-box-shadow: 0 0 0 1px #c9c9c9;
-          box-shadow: 0 0 0 1px #c9c9c9;
+  box-shadow: 0 0 0 1px #c9c9c9;
 }
 
 #invoice #paper {
   padding: 20px;
   background-color: #ffffff;
   border-radius: 5px;
-  -webkit-box-shadow: 0 0 0 1px #c9c9c9;
-          box-shadow: 0 0 0 1px #c9c9c9;
+  box-shadow: 0 0 0 1px #c9c9c9;
 }
 
 #invoice nav {
