delete 6 files and update 2 files

--- a/style.scss
+++ b/style.scss
@@ -34,6 +34,6 @@ iframe {
   height: 800px;
 }
 
-@import "./docs/cookie-compliance/cookie-compliance";
+@import "./docs/cookies/cookies";
 @import "./docs/editor/editor";
 @import "./docs/invoice/invoice";
