--- a/style.scss
+++ b/style.scss
@@ -10,6 +10,10 @@ $text: "Roboto", sans-serif;
 $white: #ffffff;
 $gray: #f8f8f8;
 
+:root {
+  font-size: 16px;
+}
+
 body {
   font-family: $text;
   margin: 25px;
