--- a/docs/style.css
+++ b/docs/style.css
@@ -199,3 +199,12 @@ iframe {
 #invoice nav {
   padding-bottom: 10px;
 }
+
+#invoice input {
+  border: none;
+  margin: 5px;
+  background-color: #ffffff;
+  border-radius: 5px;
+  -webkit-box-shadow: 0 0 0 1px #c9c9c9;
+          box-shadow: 0 0 0 1px #c9c9c9;
+}
