--- a/docs/editor/_editor.scss
+++ b/docs/editor/_editor.scss
@@ -21,6 +21,9 @@
       cursor: pointer;
       background-color: $gray;
     }
+    #devtools{
+      display: none;
+    }
   }
   textarea {
     border: none;
