--- a/style.scss
+++ b/style.scss
@@ -32,4 +32,5 @@ iframe {
 
 @import "./docs/cookies/cookies";
 @import "./docs/editor/editor";
+@import "./docs/editor-md/editor";
 @import "./docs/invoice/invoice";
