--- a/docs/editor/_editor.scss
+++ b/docs/editor/_editor.scss
@@ -1,26 +1,32 @@
-body{
-    background-color: $gray;
-}
-nav{
+#editor {
+
+nav {
+    display: inline;
+    position: fixed;
     background-color: $white;
     box-shadow: $outline;
-    position: fixed;
     left: 0;
     top: 0;
     width: 100%;
     height: 50px;
+    h1{
+        width: 200px;
+    }
+    button{
+        font-family: $heading;
+    }
 }
-
-#text {
-    margin: auto;
-    margin-top: 5%;
-    color: black;
-    background-color: white;
-    box-shadow: $outline;
-    padding: 40px;
-    width: 1000px;
-    height: 2500px;
-    &:focus {
-        outline: none;
+    #text {
+        margin: auto;
+        margin-top: 5%;
+        color: black;
+        background-color: white;
+        box-shadow: $outline;
+        padding: 40px;
+        width: 1000px;
+        height: 1400px;
+        &:focus {
+            outline: none;
+        }
     }
 }
