--- a/docs/style.css
+++ b/docs/style.css
@@ -929,6 +929,48 @@ iframe {
   outline: none;
 }
 
+#editor #counter {
+  position: fixed;
+  left: 10px;
+  bottom: 10px;
+  background-color: #ffffff;
+  -webkit-box-shadow: 0 0 0 1px #c9c9c9;
+          box-shadow: 0 0 0 1px #c9c9c9;
+  border-radius: 5px;
+  padding: 10px;
+  width: 50px;
+}
+
+#editor #shareBox {
+  width: 30px;
+  height: 30px;
+  position: absolute;
+}
+
+#editor #shareBox > button {
+  width: 100%;
+  height: 100%;
+  background-color: #292A2B;
+  border: none;
+  border-radius: 2px;
+  outline: none;
+  cursor: pointer;
+  background-image: url("https://raw.githubusercontent.com/hongkiat/selected-text-action-menu/gh-pages/twitter.png");
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: 70%;
+}
+
+#editor #shareBox > button::after {
+  position: absolute;
+  content: '';
+  border-top: 10px solid #292A2B;
+  border-left: 10px solid transparent;
+  border-right: 10px solid transparent;
+  left: 5px;
+  top: 30px;
+}
+
 #editor-md {
   padding: 25px;
   width: 50%;
