--- a/docs/style.css
+++ b/docs/style.css
@@ -1,6 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Prata&family=Raleway:wght@400;600&display=swap");
 :root {
   font-size: 16px;
 }
@@ -22,781 +21,29 @@ iframe {
   height: 800px;
 }
 
-#website {
+#website nav {
+  top: 0;
+  left: 0;
+  width: 100%;
+  position: fixed;
+  color: #ffffff;
+  -webkit-box-shadow: 0 0 0 1px #c9c9c9;
+          box-shadow: 0 0 0 1px #c9c9c9;
 }
 
-#website * {
-  margin: 0;
-  padding: 0;
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
-}
-
-#website html {
-  font-size: 100%;
-  -webkit-text-size-adjust: none;
+#website *:focus {
+  outline: none;
 }
 
 #website body {
-  width: 100%;
-  font-family: "Raleway", sans-serif;
-  line-height: 1.3;
-  display: -ms-grid;
-  display: grid;
-  row-gap: 1.5625em;
-  -ms-grid-rows: 3.875em 18.75em auto auto auto 53.6591875em 4.6625em;
-      grid-template-rows: 3.875em 18.75em auto auto auto 53.6591875em 4.6625em;
-  -ms-grid-columns: 1.25em 1fr 1.25em;
-      grid-template-columns: 1.25em 1fr 1.25em;
-      grid-template-areas: "header-mobile header-mobile header-mobile" "hero hero hero" ". about-us ." ". offer ." "gallery gallery gallery" ". contact ." ". footer .";
+  margin: auto;
+  width: 50%;
 }
 
-@media (min-width: 36em) {
-  #website body {
-    row-gap: 1.5625em;
-    -ms-grid-rows: 3.875em 18.75em auto auto auto 53.6591875em 4.6625em;
-        grid-template-rows: 3.875em 18.75em auto auto auto 53.6591875em 4.6625em;
-    -ms-grid-columns: 1.25em 1fr 1.25em;
-        grid-template-columns: 1.25em 1fr 1.25em;
-        grid-template-areas: "header-mobile header-mobile header-mobile" "hero hero hero" ". about-us ." ". offer ." "gallery gallery gallery" ". contact ." ". footer .";
-  }
-}
-
-@media (min-width: 48em) {
-  #website body {
-    row-gap: 1.875em;
-    -ms-grid-rows: 5.125em 25em auto auto auto 53.9716875em 4.975em;
-        grid-template-rows: 5.125em 25em auto auto auto 53.9716875em 4.975em;
-    -ms-grid-columns: 1.25em 1fr 1.25em;
-        grid-template-columns: 1.25em 1fr 1.25em;
-        grid-template-areas: "header-mobile header-mobile header-mobile" "hero hero hero" ". about-us ." ". offer ." "gallery gallery gallery" ". contact ." ". footer .";
-  }
-}
-
-@media (min-width: 62em) {
-  #website body {
-    row-gap: 2.5em;
-    -ms-grid-rows: 6.425em 25em auto auto auto 54.5966875em 5.6em;
-        grid-template-rows: 6.425em 25em auto auto auto 54.5966875em 5.6em;
-    -ms-grid-columns: 1fr 8fr 1fr;
-        grid-template-columns: 1fr 8fr 1fr;
-        grid-template-areas: "header-desktop header-desktop header-desktop" "hero hero hero" ". about-us ." ". offer ." "gallery gallery gallery" ". contact ." ". footer .";
-  }
-}
-
-@media (min-width: 75em) {
-  #website body {
-    row-gap: 3.125em;
-    -ms-grid-rows: 8.3125em 37.5em auto auto auto 56.834em 6.225em;
-        grid-template-rows: 8.3125em 37.5em auto auto auto 56.834em 6.225em;
-    -ms-grid-columns: 2fr 6fr 2fr;
-        grid-template-columns: 2fr 6fr 2fr;
-        grid-template-areas: "header-desktop header-desktop header-desktop" "hero hero hero" ". about-us ." ". offer ." "gallery gallery gallery" ". contact ." ". footer .";
-  }
-}
-
-#website a {
-  color: inherit;
-  text-decoration: none;
-}
-
-#website a:hover {
-  color: #ffc6c6;
-}
-
-#website p {
-  font-size: 1rem;
-}
-
-#website h1 {
+#website h1,
+#website h2,
+#website h3 {
   font-family: "Lora", serif;
-  font-size: 2rem;
-  font-weight: 400;
-  text-align: center;
-}
-
-@media (min-width: 75em) {
-  #website h1 {
-    font-size: 3rem;
-  }
-}
-
-#website h2 {
-  font-size: 1.5rem;
-  font-weight: 600;
-  text-align: center;
-  margin: calc(10em / 24) 0;
-}
-
-#website .anchor {
-  position: relative;
-  top: -1.5625em;
-}
-
-@media (min-width: 48em) {
-  #website .anchor {
-    top: -1.875em;
-  }
-}
-
-@media (min-width: 62em) {
-  #website .anchor {
-    top: -2.5em;
-  }
-}
-
-@media (min-width: 75em) {
-  #website .anchor {
-    top: -3.125em;
-  }
-}
-
-#website .header-mobile {
-  display: block;
-  margin: auto;
-  padding: 1.25em 0 0 0;
-  -ms-grid-row: 1;
-  -ms-grid-column: 1;
-  -ms-grid-column-span: 3;
-  grid-area: header-mobile;
-}
-
-#website .header-mobile p {
-  font-size: 2rem;
-  text-transform: uppercase;
-}
-
-@media (min-width: 48em) {
-  #website .header-mobile p {
-    font-size: 2.5rem;
-  }
-}
-
-@media (min-width: 62em) {
-  #website .header-mobile p {
-    display: none;
-  }
-}
-
-@media (min-width: 48em) {
-  #website .header-mobile {
-    padding: 1.875em 0 0 0;
-  }
-}
-
-@media (min-width: 62em) {
-  #website .header-mobile {
-    display: none;
-  }
-}
-
-#website .header-desktop {
-  display: none;
-}
-
-@media (min-width: 62em) {
-  #website .header-desktop {
-    width: 100%;
-    display: -ms-grid;
-    display: grid;
-    grid-area: header-desktop;
-    gap: 2.5em;
-    -ms-grid-rows: 4.55em;
-        grid-template-rows: 4.55em;
-    -ms-grid-columns: calc(50% - 30.71125em) 3.93em 5.5em 27.5625em 4.8125em 5.1875em calc(50% - 31.28125em);
-        grid-template-columns: calc(50% - 30.71125em) 3.93em 5.5em 27.5625em 4.8125em 5.1875em calc(50% - 31.28125em);
-        grid-template-areas: ". anchor_about-us anchor_offer header-heading anchor_gallery anchor_contact .";
-    margin: 1.875em auto 0 auto;
-  }
-}
-
-@media (min-width: 75em) {
-  #website .header-desktop {
-    gap: 2.5em;
-    -ms-grid-rows: 5.1875em;
-        grid-template-rows: 5.1875em;
-    -ms-grid-columns: calc(50% - 33.93em) 3.93em 5.5em 34em 4.8125em 5.1875em calc(50% - 34.5em);
-        grid-template-columns: calc(50% - 33.93em) 3.93em 5.5em 34em 4.8125em 5.1875em calc(50% - 34.5em);
-        grid-template-areas: ". anchor_about-us anchor_offer header-heading anchor_gallery anchor_contact .";
-    margin: 3.125em auto 0 auto;
-  }
-}
-
-#website .header-heading {
-  display: none;
-  grid-area: header-heading;
-}
-
-#website .header-heading p {
-  text-transform: uppercase;
-}
-
-@media (min-width: 62em) {
-  #website .header-heading p {
-    display: block;
-    margin: 0;
-    font-size: 3.5rem;
-  }
-}
-
-@media (min-width: 75em) {
-  #website .header-heading p {
-    margin: 0 0.3125em;
-    font-size: 4rem;
-  }
-}
-
-@media (min-width: 62em) {
-  #website .header-heading {
-    display: block;
-  }
-}
-
-#website .anchor_about-us, #website .anchor_offer, #website .anchor_gallery, #website .anchor_contact {
-  display: none;
-}
-
-#website .anchor_about-us p, #website .anchor_offer p, #website .anchor_gallery p, #website .anchor_contact p {
-  font-size: 1.5rem;
-}
-
-@media (min-width: 62em) {
-  #website .anchor_about-us, #website .anchor_offer, #website .anchor_gallery, #website .anchor_contact {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
-  }
-}
-
-#website .anchor_about-us {
-  grid-area: anchor_about-us;
-}
-
-#website .anchor_offer {
-  grid-area: anchor_offer;
-}
-
-#website .anchor_gallery {
-  grid-area: anchor_gallery;
-}
-
-#website .anchor_contact {
-  grid-area: anchor_contact;
-}
-
-#website .hero {
-  -ms-grid-row: 2;
-  -ms-grid-column: 1;
-  -ms-grid-column-span: 3;
-  grid-area: hero;
-  width: 100%;
-  height: 18.75em;
-  background-image: url("https://images.unsplash.com/flagged/photo-1551301622-6fa51afe75a9?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80");
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position: center;
-}
-
-@media (min-width: 48em) {
-  #website .hero {
-    height: 25em;
-  }
-}
-
-@media (min-width: 75em) {
-  #website .hero {
-    height: 37.5em;
-  }
-}
-
-#website .section-rectangle {
-  width: 3.125em;
-  height: 0.4375em;
-  margin: 0 auto 0.625em auto;
-  background-color: #ffc6c6;
-}
-
-@media (min-width: 75em) {
-  #website .section-rectangle {
-    width: 6.25em;
-    margin: 0 auto 0.9375em auto;
-  }
-}
-
-#website .about-us {
-  -ms-grid-row: 3;
-  -ms-grid-column: 2;
-  grid-area: about-us;
-}
-
-#website .about-us h1 {
-  margin: 0 0 0.3125em 0;
-}
-
-@media (min-width: 48em) {
-  #website .about-us h1 {
-    margin: 0 0 0.46875em 0;
-  }
-}
-
-@media (min-width: 75em) {
-  #website .about-us h1 {
-    margin: 0 0 0.625em 0;
-  }
-}
-
-#website .about-us .about-us_paragraph-1 {
-  text-align: justify;
-}
-
-#website .about-us .about-us_paragraph-2 {
-  margin: 0.5em 0 0 0;
-}
-
-#website .offer {
-  display: -ms-grid;
-  display: grid;
-  -webkit-column-gap: 2.5em;
-          column-gap: 2.5em;
-  -ms-grid-row: 4;
-  -ms-grid-column: 2;
-  grid-area: offer;
-  -ms-grid-rows: 1.0625em auto auto auto;
-      grid-template-rows: 1.0625em auto auto auto;
-  -ms-grid-columns: 1fr;
-      grid-template-columns: 1fr;
-      grid-template-areas: "offer-rectangle" "offer-heading" "offer-list" "offer-img";
-}
-
-#website .offer .anchor {
-  display: none;
-}
-
-@media (min-width: 62em) {
-  #website .offer .anchor {
-    display: block;
-    grid-area: offer-anchor;
-  }
-}
-
-#website .offer .section-rectangle {
-  -ms-grid-row: 1;
-  -ms-grid-column: 1;
-  grid-area: offer-rectangle;
-}
-
-#website .offer h1 {
-  -ms-grid-row: 2;
-  -ms-grid-column: 1;
-  grid-area: offer-heading;
-  margin: 0 0 0.3125em 0;
-}
-
-@media (min-width: 48em) {
-  #website .offer h1 {
-    margin: 0 0 0.46875em 0;
-  }
-}
-
-@media (min-width: 75em) {
-  #website .offer h1 {
-    margin: 0 0 0.625em 0;
-  }
-}
-
-@media (min-width: 36em) {
-  #website .offer {
-    -ms-grid-rows: 1.0625em auto var(--ulHeight);
-        grid-template-rows: 1.0625em auto var(--ulHeight);
-    -ms-grid-columns: 1fr 1fr;
-        grid-template-columns: 1fr 1fr;
-        grid-template-areas: "offer-rectangle offer-rectangle" "offer-heading offer-heading" "offer-list offer-img";
-  }
-}
-
-@media (min-width: 48em) {
-  #website .offer {
-    -ms-grid-rows: 1.0625em auto var(--ulHeight);
-        grid-template-rows: 1.0625em auto var(--ulHeight);
-    -ms-grid-columns: 1fr 1fr;
-        grid-template-columns: 1fr 1fr;
-        grid-template-areas: "offer-rectangle offer-rectangle" "offer-heading offer-heading" "offer-list offer-img";
-  }
-}
-
-@media (min-width: 62em) {
-  #website .offer {
-    -ms-grid-rows: 0 1.0625em auto var(--ulHeight);
-        grid-template-rows: 0 1.0625em auto var(--ulHeight);
-    -ms-grid-columns: 1fr 1fr;
-        grid-template-columns: 1fr 1fr;
-        grid-template-areas: "offer-anchor offer-anchor" "offer-rectangle offer-rectangle" "offer-heading offer-heading" "offer-list offer-img";
-  }
-}
-
-@media (min-width: 75em) {
-  #website .offer {
-    -ms-grid-rows: 0 1.375em auto var(--ulHeight);
-        grid-template-rows: 0 1.375em auto var(--ulHeight);
-    -ms-grid-columns: 1fr 1fr;
-        grid-template-columns: 1fr 1fr;
-        grid-template-areas: "offer-anchor offer-anchor" "offer-rectangle offer-rectangle" "offer-heading offer-heading" "offer-list offer-img";
-  }
-}
-
-@media (min-width: 100em) {
-  #website .offer {
-    -ms-grid-rows: 0 1.375em auto var(--ulHeight);
-        grid-template-rows: 0 1.375em auto var(--ulHeight);
-    -ms-grid-columns: 1fr 1fr;
-        grid-template-columns: 1fr 1fr;
-        grid-template-areas: "offer-anchor offer-anchor" "offer-rectangle offer-rectangle" "offer-heading offer-heading" "offer-list offer-img";
-  }
-}
-
-#website .offer-list {
-  -ms-grid-row: 3;
-  -ms-grid-column: 1;
-  grid-area: offer-list;
-}
-
-#website #offer-ul {
-  padding: 0 0 0 1.25em;
-}
-
-#website #offer-ul li {
-  margin: 0.4em 0;
-}
-
-#website #offer-ul li:first-child {
-  margin: 0 0 0.4em 0;
-}
-
-#website #offer-ul li:last-child {
-  margin: 0.4em 0 0 0;
-}
-
-@media (min-width: 100em) {
-  #website #offer-ul {
-    font-size: 1.25rem;
-  }
-}
-
-#website .offer-img {
-  -ms-grid-row: 4;
-  -ms-grid-column: 1;
-  grid-area: offer-img;
-}
-
-@media (min-width: 36em) {
-  #website .offer-img {
-    height: var(--ulHeight);
-    background-image: url("img-offer.jpg");
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: center;
-  }
-}
-
-@media (min-width: 48em) {
-  #website .offer-img {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-pack: end;
-        -ms-flex-pack: end;
-            justify-content: end;
-    background: none;
-  }
-}
-
-#website .offer-img img {
-  width: 100%;
-  padding: 1.25em 0 0 0;
-}
-
-@media (min-width: 36em) {
-  #website .offer-img img {
-    display: none;
-    padding: 0;
-  }
-}
-
-@media (min-width: 48em) {
-  #website .offer-img img {
-    display: block;
-    width: auto;
-    height: var(--ulHeight);
-  }
-}
-
-#website .gallery {
-  display: -ms-grid;
-  display: grid;
-  -ms-grid-rows: 1.0625em auto 1fr;
-      grid-template-rows: 1.0625em auto 1fr;
-  -ms-grid-columns: 1.25em 1fr 1.25em;
-      grid-template-columns: 1.25em 1fr 1.25em;
-      grid-template-areas: ". gallery-section-rectangle ." ". gallery-heading ." ". gallery-grid .";
-  -ms-grid-row: 5;
-  -ms-grid-column: 1;
-  -ms-grid-column-span: 3;
-  grid-area: gallery;
-  padding: 1.5625em 0;
-  background-color: #ffc6c6;
-}
-
-#website .gallery .anchor {
-  display: none;
-}
-
-@media (min-width: 62em) {
-  #website .gallery .anchor {
-    display: block;
-    grid-area: gallery-anchor;
-  }
-}
-
-#website .gallery .section-rectangle {
-  background-color: #ffffff;
-  -ms-grid-row: 1;
-  -ms-grid-column: 2;
-  grid-area: gallery-section-rectangle;
-}
-
-#website .gallery h1 {
-  color: #ffffff;
-  -ms-grid-row: 2;
-  -ms-grid-column: 2;
-  grid-area: gallery-heading;
-  margin: 0 0 0.78125em 0;
-}
-
-@media (min-width: 48em) {
-  #website .gallery h1 {
-    margin: 0 0 0.9375em 0;
-  }
-}
-
-@media (min-width: 62em) {
-  #website .gallery h1 {
-    margin: 0 0 1.25em 0;
-  }
-}
-
-@media (min-width: 75em) {
-  #website .gallery h1 {
-    margin: 0 0 calc(50em / 48) 0;
-  }
-}
-
-@media (min-width: 48em) {
-  #website .gallery {
-    padding: 1.875em 0;
-  }
-}
-
-@media (min-width: 62em) {
-  #website .gallery {
-    -ms-grid-rows: 0px 1.0625em auto 1fr;
-        grid-template-rows: 0px 1.0625em auto 1fr;
-    -ms-grid-columns: 1fr 9fr 1fr;
-        grid-template-columns: 1fr 9fr 1fr;
-        grid-template-areas: ". gallery-anchor ." ". gallery-section-rectangle ." ". gallery-heading ." ". gallery-grid .";
-    padding: 2.5em 0;
-  }
-}
-
-@media (min-width: 75em) {
-  #website .gallery {
-    -ms-grid-rows: 0px 1.375em auto 1fr;
-        grid-template-rows: 0px 1.375em auto 1fr;
-    -ms-grid-columns: 2fr 6fr 2fr;
-        grid-template-columns: 2fr 6fr 2fr;
-        grid-template-areas: ". gallery-anchor ." ". gallery-section-rectangle ." ". gallery-heading ." ". gallery-grid .";
-    padding: 3.125em 0;
-  }
-}
-
-#website .gallery-grid {
-  display: -ms-grid;
-  display: grid;
-  gap: 1.25em;
-  -ms-grid-rows: 1fr 1fr 1fr 1fr 1fr 1fr;
-      grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr;
-  -ms-grid-columns: 1fr;
-      grid-template-columns: 1fr;
-  -ms-grid-row: 3;
-  -ms-grid-column: 2;
-  grid-area: gallery-grid;
-}
-
-#website .gallery-grid img {
-  width: 100%;
-}
-
-@media (min-width: 36em) {
-  #website .gallery-grid {
-    -ms-grid-rows: 1fr 1fr 1fr;
-        grid-template-rows: 1fr 1fr 1fr;
-    -ms-grid-columns: 1fr 1fr;
-        grid-template-columns: 1fr 1fr;
-  }
-}
-
-@media (min-width: 62em) {
-  #website .gallery-grid {
-    gap: 1.25em;
-    -ms-grid-rows: 1fr 1fr;
-        grid-template-rows: 1fr 1fr;
-    -ms-grid-columns: 1fr 1fr 1fr;
-        grid-template-columns: 1fr 1fr 1fr;
-  }
-}
-
-#website .contact {
-  -ms-grid-row: 6;
-  -ms-grid-column: 2;
-  grid-area: contact;
-}
-
-#website .contact h1 {
-  margin: 0 0 0.3125em 0;
-}
-
-@media (min-width: 48em) {
-  #website .contact h1 {
-    margin: 0 0 0.46875em 0;
-  }
-}
-
-@media (min-width: 75em) {
-  #website .contact h1 {
-    margin: 0 0 0.625em 0;
-  }
-}
-
-#website .contact p {
-  text-align: center;
-}
-
-#website .contact table {
-  margin: auto;
-}
-
-#website .contact table tr:first-child td:first-child p, #website .contact table tr:last-child td:first-child p {
-  text-align: left;
-}
-
-#website .contact table tr:first-child td:last-child p, #website .contact table tr:last-child td:last-child p {
-  text-align: right;
-}
-
-#website .contact table tr:first-child td:first-child, #website .contact table tr:last-child td:first-child {
-  padding: 0 0.625em 0 0;
-}
-
-#website .contact table td:first-child td:last-child, #website .contact table tr:last-child td:last-child {
-  padding: 0 0 0 0.625em;
-}
-
-#website .contact-name {
-  font-size: 1.25rem;
-}
-
-#website .contact-social-media {
-  margin: 0.625em 0;
-  gap: 1.25em;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-}
-
-#website .contact-social-media img {
-  width: 1.875em;
-  height: 1.875em;
-}
-
-#website .contact-map {
-  width: 100%;
-  height: 28.125em;
-  margin: 1.5625em 0 0 0;
-}
-
-#website .contact-map iframe {
-  border: 0;
-}
-
-@media (min-width: 48em) {
-  #website .contact-map {
-    margin: 1.875em 0 0 0;
-  }
-}
-
-@media (min-width: 62em) {
-  #website .contact-map {
-    margin: 2.5em 0 0 0;
-  }
-}
-
-@media (min-width: 75em) {
-  #website .contact-map {
-    margin: 3.125em 0 0 0;
-  }
-}
-
-#website footer {
-  margin: 0 0 1.5625em 0;
-  -ms-grid-row: 7;
-  -ms-grid-column: 2;
-  grid-area: footer;
-  text-align: center;
-}
-
-@media (min-width: 48em) {
-  #website footer {
-    margin: 0 0 1.875em 0;
-  }
-}
-
-@media (min-width: 62em) {
-  #website footer {
-    margin: 0 0 2.5em 0;
-  }
-}
-
-@media (min-width: 75em) {
-  #website footer {
-    margin: 0 0 3.125em 0;
-  }
-}
-
-#website #signature p {
-  font-family: "Raleway", sans-serif;
-  color: inherit;
-  text-align: center;
-}
-
-#website #signature p:hover {
-  color: #ffc6c6;
-}
-
-#website #signature svg {
-  height: 12px;
-  fill-rule: evenodd;
-  clip-rule: evenodd;
-  stroke-linejoin: round;
-  stroke-miterlimit: 2;
-}
-
-#website #signature svg path {
-  fill: #ffc6c6;
 }
 
 #modal {
@@ -939,36 +186,6 @@ iframe {
   border-radius: 5px;
   padding: 10px;
   width: 50px;
-}
-
-#editor #shareBox {
-  width: 30px;
-  height: 30px;
-  position: absolute;
-}
-
-#editor #shareBox > button {
-  width: 100%;
-  height: 100%;
-  background-color: #292A2B;
-  border: none;
-  border-radius: 2px;
-  outline: none;
-  cursor: pointer;
-  background-image: url("https://raw.githubusercontent.com/hongkiat/selected-text-action-menu/gh-pages/twitter.png");
-  background-repeat: no-repeat;
-  background-position: center;
-  background-size: 70%;
-}
-
-#editor #shareBox > button::after {
-  position: absolute;
-  content: '';
-  border-top: 10px solid #292A2B;
-  border-left: 10px solid transparent;
-  border-right: 10px solid transparent;
-  left: 5px;
-  top: 30px;
 }
 
 #editor-md {
