--- a/docs/style.css
+++ b/docs/style.css
@@ -27,7 +27,7 @@ iframe {
   width: 100%;
   height: 25px;
   position: fixed;
-  color: #ffffff;
+  background-color: #ffffff;
   -webkit-box-shadow: 0 0 0 1px #c9c9c9;
           box-shadow: 0 0 0 1px #c9c9c9;
 }
