--- a/docs/website/_website.scss
+++ b/docs/website/_website.scss
@@ -5,7 +5,7 @@
         width: 100%;
         height: 25px;
         position: fixed;
-        color: $white;
+        background-color: $white;
         box-shadow: $outline;
         img {
             width: 20px;
