--- a/docs/editor/_editor.scss
+++ b/docs/editor/_editor.scss
@@ -1,5 +1,7 @@
 #editor {
     nav {
+        padding: 10px;
+        padding-left: 20%;
         display: inline;
         position: fixed;
         background-color: $white;
@@ -7,7 +9,6 @@
         left: 0;
         top: 0;
         width: 100%;
-        height: 50px;
         h1 {
             width: 200px;
         }
