--- a/docs/style.css
+++ b/docs/style.css
@@ -12,8 +12,12 @@ body {
   background-color: #f8f8f8;
 }
 
-h1 {
+h1, h2, h3 {
   font-family: "Lora", serif;
+}
+
+.commamita {
+  margin: auto;
 }
 
 iframe {
@@ -151,6 +155,8 @@ iframe {
 }
 
 #editor nav {
+  padding: 10px;
+  padding-left: 20%;
   display: inline;
   position: fixed;
   background-color: #ffffff;
@@ -159,7 +165,6 @@ iframe {
   left: 0;
   top: 0;
   width: 100%;
-  height: 50px;
 }
 
 #editor nav h1 {
